[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/basic_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/credit_screen/credit_screen.gd" type="Script" id=2]
[ext_resource path="res://screens/splash_screen/03-background-render.png" type="Texture" id=3]
[ext_resource path="res://screens/credit_screen/logo.png" type="Texture" id=4]
[ext_resource path="res://interface/theme.tres" type="Theme" id=5]
[ext_resource path="res://font/GaroaHackerClubeBold.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
extra_spacing_top = 4
font_data = ExtResource( 6 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("credits_viewport")

[node name="credit_screen" instance=ExtResource( 1 )]
script = ExtResource( 2 )
next_scene = "res://screens/promo_screen/promo_screen.tscn"

[node name="background" type="TextureRect" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="back" type="Button" parent="." index="2"]
margin_left = 881.0
margin_top = 22.0
margin_right = 1000.0
margin_bottom = 64.0
text = "skip"

[node name="top" type="HBoxContainer" parent="." index="3"]
editor/display_folded = true
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 136.0
mouse_filter = 2
custom_constants/separation = 15

[node name="pigdev" type="TextureRect" parent="top" index="0"]
margin_right = 1024.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="tools" type="VBoxContainer" parent="." index="4"]
editor/display_folded = true
margin_top = 542.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="label" type="Label" parent="tools" index="0"]
margin_right = 1024.0
margin_bottom = 22.0
text = "an open source game made with the following open source tools:"
align = 1
valign = 1
autowrap = true

[node name="list" type="HBoxContainer" parent="tools" index="1"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="tool" type="Label" parent="tools/list" index="0"]
margin_top = 5.0
margin_right = 253.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "godot engine"
align = 1

[node name="tool_2" type="Label" parent="tools/list" index="1"]
margin_left = 257.0
margin_top = 5.0
margin_right = 510.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "inkscape"
align = 1

[node name="tool_3" type="Label" parent="tools/list" index="2"]
margin_left = 514.0
margin_top = 5.0
margin_right = 767.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "lmms"
align = 1

[node name="tool_5" type="Label" parent="tools/list" index="3"]
margin_left = 771.0
margin_top = 5.0
margin_right = 1024.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "gimp"
align = 1

[node name="credits_viewport" type="Viewport" parent="." index="5"]
size = Vector2( 1024, 360 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0

[node name="parallax_background" type="ParallaxBackground" parent="credits_viewport" index="0"]
layer = 1
scroll_ignore_camera_zoom = true

[node name="parallax_layer" type="ParallaxLayer" parent="credits_viewport/parallax_background" index="0"]
motion_mirroring = Vector2( 0, 1024 )

[node name="credits" type="Container" parent="credits_viewport/parallax_background/parallax_layer" index="0"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 461.0
theme = ExtResource( 5 )

[node name="categories" type="VBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits" index="0"]
margin_right = 1012.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="patrons" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="0"]
margin_right = 1012.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "thanks to my beloved patrons!"
align = 1
valign = 1

[node name="names" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="1"]
margin_top = 44.0
margin_right = 1012.0
margin_bottom = 91.0
text = "laurence bannister
sheila rodrigues moreira"
align = 1
valign = 1

[node name="audio" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="2"]
margin_top = 99.0
margin_right = 1012.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "audio"
align = 1
valign = 1

[node name="topic_11" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="3"]
editor/display_folded = true
margin_top = 143.0
margin_right = 1012.0
margin_bottom = 165.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_11" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "background music"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_11" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="topic_12" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="4"]
editor/display_folded = true
margin_top = 173.0
margin_right = 1012.0
margin_bottom = 195.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_12" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "sound effects"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_12" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="design" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="5"]
margin_top = 203.0
margin_right = 1012.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 1 )
text = "design"
align = 1
valign = 1

[node name="topic_3" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="6"]
margin_top = 247.0
margin_right = 1012.0
margin_bottom = 269.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_3" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "user interface"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_3" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="topic_4" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="7"]
margin_top = 277.0
margin_right = 1012.0
margin_bottom = 299.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_4" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "main character"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_4" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="topic_5" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="8"]
editor/display_folded = true
margin_top = 307.0
margin_right = 1012.0
margin_bottom = 329.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_5" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "game concept"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_5" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="topic_6" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="9"]
editor/display_folded = true
margin_top = 337.0
margin_right = 1012.0
margin_bottom = 359.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_6" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "side elements"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_6" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="engineering" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="10"]
margin_top = 367.0
margin_right = 1012.0
margin_bottom = 403.0
custom_fonts/font = SubResource( 1 )
text = "engineering"
align = 1
valign = 1

[node name="topic" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="11"]
editor/display_folded = true
margin_top = 411.0
margin_right = 1012.0
margin_bottom = 433.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "core mecanics"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="graphics" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="12"]
margin_top = 441.0
margin_right = 1012.0
margin_bottom = 477.0
custom_fonts/font = SubResource( 1 )
text = "graphics"
align = 1
valign = 1

[node name="topic_7" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="13"]
margin_top = 485.0
margin_right = 1012.0
margin_bottom = 507.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_7" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "animations"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_7" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="topic_8" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="14"]
margin_top = 515.0
margin_right = 1012.0
margin_bottom = 537.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_8" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "main character"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_8" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="topic_10" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="15"]
margin_top = 545.0
margin_right = 1012.0
margin_bottom = 567.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_10" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "enviroment"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_10" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "henrique campos"
valign = 1

[node name="topic_13" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="16"]
margin_top = 575.0
margin_right = 1012.0
margin_bottom = 597.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_13" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "particles"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_13" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "luan \"honey badger\" lemes"
valign = 1

[node name="topic_14" type="HBoxContainer" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="17"]
editor/display_folded = true
margin_top = 605.0
margin_right = 1012.0
margin_bottom = 627.0
custom_constants/separation = 16

[node name="what" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_14" index="0"]
margin_right = 498.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "font garoa hacker clube"
align = 2
valign = 1

[node name="who" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories/topic_14" index="1"]
margin_left = 514.0
margin_right = 1012.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "tony de marco & diego maldonado"
valign = 1

[node name="special" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="18"]
margin_top = 635.0
margin_right = 1012.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 1 )
text = "special thanks to"
align = 1
valign = 1

[node name="thanks" type="Label" parent="credits_viewport/parallax_background/parallax_layer/credits/categories" index="19"]
margin_top = 679.0
margin_right = 1012.0
margin_bottom = 776.0
text = "rebeca \"kaleva\" araujo
william \"tumeo\" tumeo

and all godot engine community"
align = 1
valign = 1

[node name="credits" type="Sprite" parent="." index="6"]
position = Vector2( 0, 139 )
texture = SubResource( 2 )
centered = false
flip_v = true
[connection signal="button_up" from="back" to="." method="change_scene"]
